--- a/.gitignore
+++ b/.gitignore
@@ -111,13 +111,10 @@ hs_err_pid*
 # ignore .docx files
 *.docx
 
-# ignore .pdf
+# ignore .pdf files
 *.pdf
 
-# ignore program-state.txt
-program-state.txt
-
-# ignore README_FOR_PROTOTYPE
-README_FOR_PROTOTYPE.txt
+# ignores .txt files
+*.txt
 
 # End of https://www.gitignore.io/api/java,intellij
